# old-car-price-prediction-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
airflow/dags/: etl_pipeline.py  model_pipeline.py
airflow_dags/: car_price_pipeline_dag.py
configs/: config.py  config.yaml
src/api/: main.py  requirements.txt  utils.py
src/comparer/: data_comparer.py  model_comparer.py
src/crawler/: __init__.py  base_crawler.py  car_dao.py  car_dto.py  main_crawler.py  test.ipynb  utils.py
src/data_pipeline/: evaluate_model.py  preprocess.py  save_model.py  train_model.py
src/logger/: logger.py
src/ml_pipeline/: base_pipeline.py  car_prediction_pipeline.py  data_prep.py  evaluate_model.py  model_build.py  model_eval.py  model_reg.py  preprocess.py  save_model.py  train_model.py  utils.py
src/scripts/: __init__.py  data_extract.py  data_transform.py  extract.py  ingest_data.py  model_build.py  model_eval.py  model_reg.py  run_ml_pipeline.py  transform.py  utils.py
src/wrapper/: adaboost_wrapper.py  linear_wrapper.py  rf_wrapper.py  xgb_wrapper.py
